--- a/jobs/jobs.yml
+++ b/jobs/jobs.yml
@@ -262,6 +262,7 @@
 - project:
     name: jesus-film-android
     description-intro: Builds, tests, & deploys the Jesus Film Android App.
+    email-recipients: michael.harrison@cru.org
     authorized-developers:
       - michaelharro
       - frett
@@ -273,6 +274,7 @@
 - project:
     name: jesus-film-ios
     description-intro: Builds, tests, & deploys the Jesus Film iOS App.
+    email-recipients: michael.harrison@cru.org
     authorized-developers:
       - michaelharro
       - charliepixegon
@@ -365,6 +367,8 @@ publisher:
             mobile-publishers:
               - 'publish-mobile-html-results'
               - 'publish-mobile-junit-results'
+              - email:
+                recipients: '{email-recipients}'
         - 'mobile-template':
             description-build-type-info: 'Runs when pull requests are submitted to {git-branch} branch. If building and testing is successful the app will be deployed to crashlytics for beta testing.'
             build-type: 'beta'
@@ -380,6 +384,8 @@ publisher:
             mobile-publishers:
               - 'publish-mobile-html-results'
               - 'publish-mobile-junit-results'
+              - email:
+                recipients: '{email-recipients}'
         - 'mobile-template':
             description-build-type-info: 'Runs when pull requests are submitted to {git-branch} branch. If building and testing is successful the app will be deployed to crashlytics for beta testing.'
             build-type: 'production'
@@ -392,6 +398,8 @@ publisher:
               - 'publish-mobile-screenshots'
               - 'publish-mobile-html-results'
               - 'publish-mobile-junit-results'
+              - email:
+                recipients: '{email-recipients}'
 
 
 
