--- a/jobs/jobs.yml
+++ b/jobs/jobs.yml
@@ -468,11 +468,13 @@ publisher:
         colormap: xterm
     builders:
       - shell: |
-        diffContent=$(git diff HEAD^ HEAD)
+        set +x
+        diffContent=$(git diff $GIT_ORIGIN_BRANCH^ $GIT_ORIGIN_BRANCH)
         diffSearchString="fastlane\|FASTLANE_USER\|FASTLANE_PASSWORD\|FASTLANE_DONT_STORE_PASSWORD\|FASTLANE_TEAM_ID\|CODE_SIGNING_IDENTITY\|CERT_PASSWORD\|KEYCHAIN_NAME|\KEYCHAIN_PASSWORD\|DELIVER_PASSWORD\|DELIVER_USER"
         RED_COLOR='\033[0;31m'
         NO_COLOR='\033[0m'
         $diffContent | grep -q $diffSearchString
+        set -x
         if [ $? -eq 0 ]; then
           echo -e "${RED_COLOR}Unfortunately you do not have permission to change build scripts. Contact your system admin if you think you should be able to run this build.${NO_COLOR}"
           exit 1
