--- a/jobs/jobs.yml
+++ b/jobs/jobs.yml
@@ -287,25 +287,25 @@
 - job-group:
     name: 'php-template'
     jobs:
-        - 'web-template':
+        - '{name}':
             build-script: php_deploy.sh
 
 - job-group:
     name: 'openresty-template'
     jobs:
-        - 'web-template':
+        - '{name}':
             build-script: openresty_deploy.sh
 
 - job-group:
     name: 'rails-template'
     jobs:
-        - 'web-template':
+        - '{name}':
             build-script: rails_deploy.sh
 
 - job-group:
     name: 'react-template'
     jobs:
-        - 'web-template':
+        - '{name}':
             build-script: react_deploy.sh
 
 - publisher:
@@ -356,7 +356,7 @@
     defaults:
       crashlytics-group-default: ''
     jobs:
-        - 'mobile-template':
+        - '{name}-{build-type}':
             description-build-type-info: 'Runs when pull requests are created. It will run your tests and put the result on the PR.'
             build-type: 'tests'
             number-of-builds-to-keep: 1
@@ -373,8 +373,8 @@
                   branch-filter: '.*/merge'
                   sort: 'descending'
                   default: :origin/(master|staging)
-            git-branch: '${GIT_BRANCH}'
-            git-branch-to-build: '${sha1}'
+            git-branch: '$GIT_BRANCH'
+            git-branch-to-build: '$sha1'
             git-fetch-filter-refspec: '+refs/pull/*:refs/remotes/origin/pr/*'
             fastlane-lane: 'run_tests'
             fastlane-env: 'tests'
@@ -383,38 +383,38 @@
               - 'publish-mobile-html-code-coverage-results'
               - 'publish-mobile-junit-results'
               - email:
-                recipients: '{email-recipients}'
-        - 'mobile-template':
+                  recipients: '{email-recipients}'
+        - '{name}-{build-type}':
             description-build-type-info: 'Runs when pull requests are submitted to {git-branch} branch. If building and testing is successful the app will be deployed to crashlytics for beta testing.'
             build-type: 'beta'
             number-of-builds-to-keep: 5
-            mobile-parameters:
+            parameters:
               - string:
-                name: CRASHLYTICS_GROUP
-                default: {crashlytics-group-default}
-                description: Alias of Crashlytics group to receive beta build
+                  name: CRASHLYTICS_GROUP
+                  default: {crashlytics-group-default}
+                  description: Alias of Crashlytics group to receive beta build
             git-branch: 'develop'
-            git-branch-to-build: '${GIT_ORIGIN_BRANCH}'
+            git-branch-to-build: '$GIT_ORIGIN_BRANCH'
             git-fetch-filter-refspec: '+refs/heads/develop:refs/remotes/origin/develop'
             fastlane-lane: 'beta'
             fastlane-env: 'beta'
-            mobile-publishers:
+            publishers:
               - 'publish-mobile-html-unit-test-results'
               - 'publish-mobile-html-code-coverage-results'
               - 'publish-mobile-junit-results'
               - email:
-                recipients: '{email-recipients}'
-        - 'mobile-template':
+                  recipients: '{email-recipients}'
+        - '{name}-{build-type}':
             description-build-type-info: 'Runs when pull requests are submitted to {git-branch} branch. If building and testing is successful the app will be deployed to crashlytics for beta testing.'
             build-type: 'production'
             number-of-builds-to-keep: -1
             mobile-parameters:
             git-branch: 'master'
-            git-branch-to-build: '${GIT_ORIGIN_BRANCH}'
+            git-branch-to-build: '$GIT_ORIGIN_BRANCH'
             git-fetch-filter-refspec: '+refs/heads/master:refs/remotes/origin/master'
             fastlane-lane: 'production'
             fastlane-env: 'production'
-            mobile-publishers:
+            publishers:
               - 'publish-mobile-screenshots'
               - 'publish-mobile-html-unit-test-results'
               - 'publish-mobile-html-code-coverage-results'
@@ -425,7 +425,6 @@
 
 
 - job-template:
-    id: 'mobile-template'
     name: '{name}-{build-type}'
     node: mac
     logrotate:
@@ -434,7 +433,6 @@
       {description-intro}
 
       {description-build-type-info}
-    parameters: '{obj:mobile-parameters}'
     properties:
       - github:
           url: https://github.com/CruGlobal/{name}/
@@ -452,11 +450,11 @@
             LC_ALL=en_US.UTF-8
 
             GIT_BRANCH={git-branch}
-            GIT_ORIGIN_BRANCH=origin/${GIT_BRANCH}
+            GIT_ORIGIN_BRANCH=origin/$GIT_BRANCH
     scm:
       - git:
           branches:
-          - {git-branch-to-build}
+            - {git-branch-to-build}
           url: git@github.com:CruGlobal/{name}.git
           credentials-id: '66c3b5a3-0f7c-4e22-97b2-a78fb5a73658'
           refspec: {git-fetch-filter-refspec}
@@ -486,15 +484,16 @@
         colormap: xterm
     builders:
       - shell: |
+          #!/usr/bin/env bash
           set +x
           diffContent=$(git diff $GIT_ORIGIN_BRANCH^ $GIT_ORIGIN_BRANCH)
-          diffSearchString="fastlane\|FASTLANE_USER\|FASTLANE_PASSWORD\|FASTLANE_DONT_STORE_PASSWORD\|FASTLANE_TEAM_ID\|CODE_SIGNING_IDENTITY\|CERT_PASSWORD\|KEYCHAIN_NAME|\KEYCHAIN_PASSWORD\|DELIVER_PASSWORD\|DELIVER_USER"
+          diffSearchString="fastlane[^/metadata]\|FASTLANE_USER\|FASTLANE_PASSWORD\|FASTLANE_DONT_STORE_PASSWORD\|FASTLANE_TEAM_ID\|CODE_SIGNING_IDENTITY\|CERT_PASSWORD\|KEYCHAIN_NAME|\KEYCHAIN_PASSWORD\|DELIVER_PASSWORD\|DELIVER_USER"
           RED_COLOR='\033[0;31m'
           NO_COLOR='\033[0m'
-          $diffContent | grep -q $diffSearchString
+          echo "$diffContent" | grep -q $diffSearchString
           set -x
           if [ $? -eq 0 ]; then
-            echo -e "${RED_COLOR}Unfortunately you do not have permission to change build scripts. Contact your system admin if you think you should be able to run this build.${NO_COLOR}"
+            echo -e "$RED_COLOR" "Unfortunately you do not have permission to change build scripts. Contact your system admin if you think you should be able to run this build." "$NO_COLOR"
             exit 1
           else
             exit 0
@@ -502,12 +501,10 @@
       - shell: |
           bundle install
           bundle exec fastlane {fastlane-lane} --env {fastlane-env}
-    publishers: '{obj:mobile-publishers}'
 
 
 
 - job-template:
-    id: 'web-template'
     name: '{name}'
     description: |
       {description-intro}
