enable run-headless and disable automatic-archiving
The former is a very slight runtime optimization.
The latter is mainly due to how much disk space it requires for EP jobs.

--- a/jobs/ep-jobs.yml
+++ b/jobs/ep-jobs.yml
@@ -138,6 +138,8 @@
           maven-opts: -Xmx1536m
           run-headless: true
           settings: /var/lib/jenkins/ep-settings.xml
+          run-headless: true
+          automatic-archiving: false
 
 - job:
     name: give-ep-commerce-engine-test-develop
