run 'verify' phase in order to active code quality checks
The build binds Checkstyle, PMD, and Findbugs to the 'verify' phase, which happens after the 'test' phase.

--- a/jobs/ep-jobs.yml
+++ b/jobs/ep-jobs.yml
@@ -277,7 +277,7 @@
 
     maven:
           <<: *typicalMaven
-          goals: clean test --batch-mode --threads 1C
+          goals: clean verify --batch-mode --threads 1C
 
     reporters:
       - email:
