add `--errors` to test job
The other jobs have this, and there's no reason not to use in the test job.

--- a/jobs/ep-jobs.yml
+++ b/jobs/ep-jobs.yml
@@ -277,7 +277,7 @@
 
     maven:
           <<: *typicalMaven
-          goals: clean verify --batch-mode --threads 1C
+          goals: clean verify --errors --batch-mode --threads 1C
 
     reporters:
       - email:
