use the correct (non-default) pom in the deployment package job

--- a/jobs/ep-jobs.yml
+++ b/jobs/ep-jobs.yml
@@ -376,6 +376,7 @@
 
     maven:
           <<: *typicalMaven
+          root-pom: packager/pom.xml
           goals: clean deploy --update-snapshots --errors  --batch-mode
 
     reporters:
